# fluid-sense

./: Cargo.toml  README.md  config.yml
assets/: config.json  particle.txt
assets/maps/: default.txt  default.txt.bkp  default.txt.bkp2
assets/shaders/: default.wgsl  particle.wgsl  phong.wgsl
src/: app.rs  main.rs
src/cfd/: config.rs  mod.rs
src/cfd/sph/: kernel.rs  mod.rs  simulation.rs
src/gfx/: buffer.rs  light.rs  material.rs  mesh.rs  mod.rs  pipeline_bkp.rs  renderer.rs  renderer_bkp.rs  texture.rs  uniform.rs  vertex.rs
src/gfx/camera/: controller.rs  mod.rs  projection.rs
src/gfx/pipeline/: builder.rs  mod.rs  phong.rs
src/scene/: mod.rs  world_map.rs
src/scene/object/: cube.rs  mod.rs  particle.rs  plane.rs
